<resources>
    <string name="app_name">SillyStories</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_story">NewStoryActivity</string>
    <string name="title_activity_saved_story">SavedStoryActivity</string>
    <string name="title_activity_story_menu">StoryMenuActivity</string>
    <string name="title_activity_saved_story_menu">SavedStoryMenuActivity</string>
    <string name="title_activity_character_selection">CharacterSelectionActivity</string>
    <string name="title_activity_noun_selection">NounSelectionActivity</string>
    <string name="title_activity_adjective_selection">AdjectiveSelectionActivity</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="title_activity_end_menu">EndMenuActivity</string>
    <string name="story1">Ride to the Airport</string>
    <string name="story2">Lunchtime</string>
    <string name="story3">Soccer</string>
    <string name="story4">Leprechaun</string>
    <string name="story5">School Days</string>
    <string name="story6">Lost in Space</string>
    <string name="story7">Food Shopping</string>
    <string name="story8">Castles and Dragons</string>
    <string name="story9">Splatfest</string>
    <string name="story10">Chasing Cats</string>
    <string name="noun0">"wig"</string>
    <string name="noun1">"umbrella"</string>
    <string name="noun2">"leprechaun"</string>
    <string name="noun3">"rock"</string>
    <string name="noun4">"blanket"</string>
    <string name="noun5">"clam"</string>
    <string name="noun6">"sock"</string>
    <string name="noun7">"roly poly"</string>
    <string name="noun8">"trophy"</string>
    <string name="noun9">"rainbow"</string>
    <string name="noun10">"gold"</string>
    <string name="noun11">"flower"</string>
    <string name="char0">"Starfire"</string>
    <string name="char1">"Beast Boy"</string>
    <string name="char2">"Raven"</string>
    <string name="char3">"Cyborg"</string>
    <string name="char4">"Robin"</string>
    <string name="char5">"Squid Boy"</string>
    <string name="char6">"Splat Girl"</string>
    <string name="char7">"Link"</string>
    <string name="char8">"Zelda"</string>
    <string name="char9">"Grandma"</string>
    <string name="char10">"Skye"</string>
    <string name="char11">"Rosie"</string>
    <string name="char12">"Senji"</string>
    <string name="adj0">"suspicious"</string>
    <string name="adj1">"cozy"</string>
    <string name="adj2">"stinky"</string>
    <string name="adj3">"silly"</string>
    <string name="adj4">"pesky"</string>
    <string name="adj5">"squishy"</string>
    <string name="adj6">"cuddly"</string>
    <string name="adj7">"bubbly"</string>
    <string name="adj8">"zesty"</string>
    <string name="adv0">"sneakily"</string>
    <string name="adv1">"secretly"</string>
    <string name="adv2">"happily"</string>
    <string name="adv3">"quietly"</string>
    <string name="adv4">"loudly"</string>
    <string name="adv5">"wildly"</string>
    <string name="adv6">"sadly"</string>
    <string name="adv7">"crabbily"</string>
    <string name="adv8">"crazily"</string>
    <string name="title_activity_delete">DeleteActivity</string>


</resources>
